@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Use Unicode::UTF8 for encoding output data if available
 
 0.005     2021-04-22 21:11:18 EDT
   - Separate documentation from code for efficiency
